[package]
name = "mio-serial"
version = "4.0.0-alpha.1"
authors = ["Zac Berkowitz <zac.berkowitz@gmail.com>"]
description = "A serial port implementation for mio"
license = "MIT"
homepage = "https://github.com/berkowski/mio-serial"
repository = "https://github.com/berkowski/mio-serial"
documentation = "http://docs.rs/mio-serial"
readme = "README.md"
keywords = ["rs232", "serial", "mio"]
categories = ["asynchronous", "hardware-support"]
edition = "2018"

[badges]
appveyor = { repository = "berkowski/mio-serial", service = "github" }
travis-ci = { repository = "berkowski/mio-serial", service = "github" }

[features]
default = ["libudev"]

libudev = ["serialport/libudev"]

[dependencies]
mio = { version = "^0.8", features = ["os-ext"] }
serialport = { version = "~3.3", default-features = false }

[target.'cfg(unix)'.dependencies]
nix = "^0.17"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["commapi", "handleapi", "winbase"] }

[[example]]
name = "serial_printline"
path = "examples/serial_printline.rs"
